# boswell-mcp

./: .gitignore  Dockerfile  add_warning.py  app.py  backfill_embeddings.py  encryption_service.py  http_server.py  mcp.php  migration_fix_constraints.sql  migration_phase2_encryption.sql  pyproject.toml  railway.json  requirements.txt  run_fix_constraints.py  run_phase2_migration.py  run_v3_migration.py  server.py  tmpclaude-0a83-cwd
boswell_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
boswell_mcp/templates/: claude_md.txt
